Implementado uma sidebarMenu do lado esquerdo

--- a/src/components/CadastroUser.css
+++ b/src/components/CadastroUser.css
@@ -1,6 +1,10 @@
 #formulario {
-  max-width: 360px;
+  max-width: 500px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #000;
 }
 
 h2 {
@@ -47,5 +51,19 @@ select {
   margin: 3px;
 }
 img {
-  width: 100%;
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  border-color: black;
+  justify-items: center;
+  box-shadow: 2px 5px 4px 3px;
+  padding: 20px;
+  width: 500px;
+  height: 600px;
 }
